fix scrollbar shifting other content

--- a/src/popup/index.css
+++ b/src/popup/index.css
@@ -25,7 +25,7 @@
 /* Track */
 ::-webkit-scrollbar-track {
   border-radius: 100vh;
-  background: #2A2440;
+  /* background: #2A2440; */
 }
 
 /* Handle */
